[gd_scene load_steps=2 format=3 uid="uid://cayffis3xhk77"]

[ext_resource type="Script" uid="uid://jxo5os8rvw7f" path="res://code/ui/pause_menu.gd" id="1_6tw0m"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_6tw0m")
id = &"pause_menu"
metadata/_custom_type_script = "uid://bt1wwjwsr1i2v"

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(650, 370)
layout_mode = 0
offset_left = -5.0
offset_top = -5.0
offset_right = 645.0
offset_bottom = 365.0
theme_type_variation = &"MenuBackPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="v_spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="pause_title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"RoundTitle"
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="v_spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="v_spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="bottom" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/separation = 0

[node name="h_spacer" type="Control" parent="VBoxContainer/bottom"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="continue_button" type="Button" parent="VBoxContainer/bottom"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Continue"

[node name="return_button" type="Button" parent="VBoxContainer/bottom"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Main Menu"

[node name="h_spacer2" type="Control" parent="VBoxContainer/bottom"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="v_spacer4" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
